# data-analytic-python

./: pyproject.toml
data/: database.csv
data_analytic_python/: main.py
data_analytic_python/repeated/: generate.py  information.py  repeated_person.py
scripts/: atendimento.sql  contato_email.sql  contato_telefone.sql  documento.sql  geralpessoa.sql  localidade.sql
