[tool.poetry]
name = "data-analytic-python"
version = "0.1.0"
description = ""
authors = ["gabriel.mango <gabriel.mango@defensoria.mg.def.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.1.4"
blue = "^0.9.1"
isort = "^5.13.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
